@@ -4017,7 +4017,8 @@ With the advanced PCI options it is possible to control the behaviour of the
 PCI chipset. These options can be specified as comma-separated values.
 By default the "Bochs i440FX" chipset enables the ACPI and HPET devices, but
 original i440FX doesn't support them. The options 'noacpi' and 'nohpet' make
-it possible to disable them.
+it possible to disable them. The option 'noagp' disables the incomplete AGP
+subsystem of the i440BX chipset.
 </para>
 </section>
 
